# teaching

./: .gitignore  README.md  create_structure.py  gen_countdown.py  publication_award.md  pyproject.toml  teaching.yml
3mt/: 3mt_prompt.txt  Eakkachai.txt  Kharittha.txt  Khitaphat.txt  Mariyam.txt  Opnithi.txt  buntita.txt  firdao.txt  phurit.txt  punnarong.txt  punnawat.txt  sunisa.txt  test.ipynb  test.py
ai_for_admins/: README.md  create_feedback_form.py  diagram_enhance.md  feedback_form_link.md  feedback_form_links.md  presenters_note.md  rough_planning.md  schedule.md  task_progress.md  workshop_schedule.md
ai_for_admins/examples/: README.md  UPLOAD_INSTRUCTIONS.md  all_document_links.md  create_reference_docx.py  delete_docx_files.py  md_to_gdocs.py  md_to_gdocs_bulk.py  reference.docx  requirements.txt  upload_ai_docs.py  upload_to_docs.py  upload_to_docs_improved.py  upload_to_sheets.py  upload_to_target_folder.py
ai_for_admins/presentation/: package-lock.json  package.json  slides.md
ai_tools/: Bigendra_16000_transcript.txt  Sanoj_16000_transcript.txt  Sunit_16000_transcript.txt  kishor_16000_transcript.txt  transcribe.py
ai_workshop_students/: README.md  SPEAKER.md  project-status.md
ai_workshop_students/00-source-materials/: ai_workshop.md
ai_workshop_students/01-rescoped-schedule/: module_breakdown.md  schedule.md  timing_rationale.md
ai_workshop_students/02-detailed-content/: content_notes.md  learning_objectives.md  workshop_content.md
ai_workshop_students/03-presentation-materials/: presentation_checklist.md  slides_outline.md  speaker_notes.md
ai_workshop_students/04-slide-deck/: REVISION_NOTES.md  design_notes.md  package-lock.json  presentation.md
ai_workshop_students/05-resources/: quick_reference.md  setup_instructions.md
ai_workshop_students/06-quality-review/: final_checklist.md  implementation_guide.md  (+1 more)
aun_folder_structure/: create_structure.py
cpr/: grader.py  test.ipynb
dev_tools/: teaching.yml
grading 2023-01/: Thinking in Number Processed Grade.xlsx  cpr certificate list.xlsx  cpr processed grade.xlsx
moodle_tools/: question_bank_template.xml
phd_presentation/: Bigendra.txt  Dhanendra.txt  Dilli.txt  Gyanendra.txt  Kamal.txt  Kishor.txt  Sujata.txt  transcribe.py
(+123 files in other folders)
