[tool.poetry]
name = "teaching"
version = "0.1.0"
description = ""
authors = ["Tanwa Arpornthip <72845369+CommanderCrowCode@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
flamingotools = {git = "git@github.com:CommanderCrowCode/FlamingoTools.git"}
ipython = "^8.24.0"
jupyter = "^1.0.0"
notebook = "^7.1.3"
pyperclip = "^1.8.2"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
