[project]
name = "teaching"
version = "0.1.0"
description = ""
authors = [{ name = "Tanwa Arpornthip", email = "72845369+CommanderCrowCode@users.noreply.github.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "pillow>=10.3.0,<11",
    #    "flamingotools @ git+ssh://git@github.com/CommanderCrowCode/FlamingoTools.git@main",
    "ipython>=8.24.0,<9",
    "jupyter>=1.0.0,<2",
    "notebook>=7.1.3,<8",
    "pyperclip>=1.8.2,<2",
    "pdf2image>=1.17.0,<2",
    "numpy==1.26.3",
    "opencv-python==4.9.0.80",
    "ipykernel>=6.29.5,<7",
    "matplotlib>=3.9.2,<4",
    "pandas>=2.2.3,<3",
    "openpyxl>=3.1.5,<4",
    "ffmpeg-python>=0.2.0,<0.3",
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true
